# opencv_cpp_tutorials

chapter2_basics/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
chapter2_basics/headers/: utils.h
